--- a/FociWebApp/Pages/Stats.cshtml
+++ b/FociWebApp/Pages/Stats.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "League Stats";
 }
 <h1>Bajnokság Állása</h1>
-<table>
+<table class="table">
     <thead>
         <tr>
-            <th>Ranking: </th>
+            <th>Ranking</th>
             <th>Team</th>
             <th>Games Played</th>
             <th>Wins</th>
